--- a/package.json
+++ b/package.json
@@ -12,26 +12,34 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.0.3",
+    "@angular/cdk": "^11.2.0",
     "@angular/common": "~11.0.3",
     "@angular/compiler": "~11.0.3",
     "@angular/core": "~11.0.3",
     "@angular/forms": "~11.0.3",
     "@angular/localize": "~11.0.3",
+    "@angular/material": "^11.2.0",
     "@angular/platform-browser": "~11.0.3",
     "@angular/platform-browser-dynamic": "~11.0.3",
     "@angular/router": "~11.0.3",
     "@auth0/angular-jwt": "^5.0.2",
     "@ng-bootstrap/ng-bootstrap": "^8.0.0",
+    "angular-ng-autocomplete": "^2.0.5",
+    "angular2-multiselect-dropdown": "^4.6.9",
     "bootstrap": "^4.5.3",
     "bootstrap-icons": "^1.2.2",
     "font-awesome": "^4.7.0",
     "jwt-decode": "^3.1.2",
     "materialize-css": "^1.0.0-rc.2",
+    "mdb-ui-kit": "^3.2.0",
+    "ng-auto-complete": "^4.1.15",
+    "ng-multiselect-dropdown": "^0.2.14",
     "primeicons": "^4.1.0",
     "primeng": "^11.1.0-rc.1",
     "rxjs": "~6.6.0",
     "sweetalert": "^2.1.2",
-    "tslib": "^2.0.0",
+    "sweetalert2": "^10.14.0",
+    "tslib": "^2.1.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
